# note-ls

./: Cargo.toml  LICENSE  README.md
aurelius/src/: lib.rs
aurelius/static/js/: markdown_client.js
aurelius/templates/: markdown_view.html
language-server/: Cargo.toml
language-server/src/: main.rs
md4c/: .gitignore
md4c/md2html/: md2html
md4c/src/: md4c-html.pc  md4c.pc
src/: main.rs
